@@ -212,7 +212,7 @@
             <artifactId>strongbox-storage-npm-layout-provider</artifactId>
             <version>${project.version}</version>
             <type>test-jar</type>
-            <scope>test</scope>            
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
@@ -361,7 +361,7 @@
             <groupId>org.ow2.asm</groupId>
             <artifactId>asm-analysis</artifactId>
         </dependency>
-        
+
         <!-- Spring security dependencies -->
         <dependency>
             <groupId>org.springframework.security</groupId>
@@ -389,7 +389,7 @@
             <groupId>io.rest-assured</groupId>
             <artifactId>xml-path</artifactId>
         </dependency>
-        
+
 
         <!-- Serialization and data format dependencies -->
         <dependency>
@@ -436,7 +436,7 @@
             <groupId>io.reactivex.rxjava2</groupId>
             <artifactId>rxjava</artifactId>
         </dependency>
-        
+
         <!-- Other utils: swagger, .. -->
         <dependency>
             <groupId>io.swagger</groupId>
@@ -461,12 +461,6 @@
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
         </dependency>
-        <dependency>
-            <groupId>org.hamcrest</groupId>
-            <artifactId>hamcrest</artifactId>
-            <version>${version.hamcrest}</version>
-            <scope>test</scope>
-        </dependency>
 
         <dependency>
             <groupId>com.unboundid</groupId>
@@ -481,7 +475,7 @@
             <groupId>org.hibernate.validator</groupId>
             <artifactId>hibernate-validator</artifactId>
         </dependency>
-        
+
         <dependency>
             <groupId>javax.transaction</groupId>
             <artifactId>javax.transaction-api</artifactId>
@@ -517,4 +511,73 @@
 
     </dependencies>
 
+    <profiles>
+        <profile>
+            <id>jdk-default</id>
+            <activation>
+                <jdk>!11</jdk>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.springframework.boot</groupId>
+                        <artifactId>spring-boot-maven-plugin</artifactId>
+                        <configuration>
+                            <jvmArguments>
+                                -Xmx1024m
+                            </jvmArguments>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>jdk11</id>
+            <activation>
+                <jdk>11</jdk>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.springframework.boot</groupId>
+                        <artifactId>spring-boot-maven-plugin</artifactId>
+                        <configuration>
+                            <jvmArguments>
+                                -Xmx1024m
+                                -Djdk.attach.allowAttachSelf=true
+                                --add-exports java.base/jdk.internal.misc=ALL-UNNAMED
+                                --add-exports java.base/jdk.internal.ref=ALL-UNNAMED
+                                --add-exports java.base/sun.nio.ch=ALL-UNNAMED
+                                --add-exports
+                                java.management.rmi/com.sun.jmx.remote.internal.rmi=ALL-UNNAMED
+                                --add-exports
+                                java.rmi/sun.rmi.registry=ALL-UNNAMED
+                                --add-exports
+                                java.rmi/sun.rmi.server=ALL-UNNAMED
+                                --add-exports
+                                java.sql/java.sql=ALL-UNNAMED
+
+                                --add-opens
+                                java.base/java.lang.module=ALL-UNNAMED
+                                --add-opens
+                                java.base/jdk.internal.loader=ALL-UNNAMED
+                                --add-opens
+                                java.base/jdk.internal.ref=ALL-UNNAMED
+                                --add-opens
+                                java.base/jdk.internal.reflect=ALL-UNNAMED
+                                --add-opens
+                                java.base/jdk.internal.math=ALL-UNNAMED
+                                --add-opens
+                                java.base/jdk.internal.module=ALL-UNNAMED
+                                --add-opens
+                                java.base/jdk.internal.util.jar=ALL-UNNAMED
+                                --add-opens
+                                jdk.management/com.sun.management.internal=ALL-UNNAMED
+                            </jvmArguments>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project>
